[package]
name = "rust-axum"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused = "allow"       # early dev

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.13"

# Axum
axum = { version = "0.8.4", features = [
    "macros",
] } # macro is to derive 'FromRef'
tower-http = { version = "0.6.6", features = ["fs"] }
tower-cookies = "0.11.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
] }
sea-query = "0.32"
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres", "with-uuid"] }
modql = { version = "0.4", features = ["with-sea-query"] }

# Encryption and Encoding
rand = "0.9"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Others
lazy-regex = "3.4.1"
strum_macros = "0.27.1"
uuid = { version = "1.17.0", features = ["v4", "fast-rng"] }
time = "0.3"
derive_more = { version = "2.0", features = ["from"] }

[dev-dependencies]
anyhow = "1.0.98"
httpc-test = "0.1.10" # use reqwest and cookie store
serial_test = "3"
