[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow"

[workspace]
resolver = "3"
members = [
    # Application libraries
    "crates/libs/lib-utils", # e.g. base64, time
    "crates/libs/lib-rpc", # e.g. rpc routing
    "crates/libs/lib-auth", # e.g. pwd, token
    "crates/libs/lib-core", # e.g. model, context, config

    # Application services
    "crates/services/web-server",

    # Tools
    "crates/tools/gen-key",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
