[package]
name = "lib-rpc"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# App Libs
lib-core = { path = "../../libs/lib-core"}
# Async
tokio = { version = "1", features = ["full"] }
# Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# Data
modql = {version = "0.4", features = ["with-sea-query"]}
# Others
derive_more = {version = "2.0", features = ["from"] }